name:                ntcedtcp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Dmitry Zuikov
maintainer:          dzuikov@gmail.com
-- copyright:           
category:            Application 
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Network.NTCE.Types, Network.NTCE.FlowRecord.Pretty
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , msgpack
                     , text
                     , vector
                     , wl-pprint-text
  default-language:    Haskell2010

executable ntced-sink-udp 
  hs-source-dirs:      app
  main-is:             UdpSink.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , streaming-commons
                     , async
                     , word8
                     , network
                     , msgpack
                     , text
                     , vector
                     , optparse-applicative
                     , ntcedtcp

  default-language:    Haskell2010
  
executable ntced-sink-tcp
  hs-source-dirs:      app
  main-is:             TcpServ.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N   
  build-depends:       base
                     , bytestring                     
                     , containers
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , streaming-commons
                     , async
                     , word8
                     , network
                     , msgpack
                     , text
                     , vector
                     , optparse-applicative
                     , stm
                     , rolling-queue
                     , wl-pprint-text
                     , network
                     , sockaddr
                     , ntcedtcp

  default-language:    Haskell2010
